--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupEventsMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupEventsMenu.cshtml
@@ -3,7 +3,7 @@
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Groups.Profile
-@model GroupPageViewModelBase
+@model GroupPageViewModel
 @{    
     var menuItems = new MenuItem[]
     {
