--- a/ODK.Web.Razor/wwwroot/css/odk/bootstrap/_postvariables.scss
+++ b/ODK.Web.Razor/wwwroot/css/odk/bootstrap/_postvariables.scss
@@ -1,3 +1,7 @@
 @if $odk == true {
     $font-family-base: 'Josefin Sans', $font-family-base;
 }
+
+@if $odk == false {
+    $font-family-base: 'Inter', $font-family-base;
+}
