--- a/ODK.Web.Razor/Pages/My/Groups/Create.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Create.cshtml
@@ -47,6 +47,7 @@
 
                 @await Html.PartialAsync("Groups/_GroupCreateForm", new CreateChapterFormViewModel
                 {
+                    Countries = viewModel.Countries,
                     Location = new LocationFormViewModel
                     {
                         Lat = viewModel.MemberLocation?.LatLong.Lat,
