--- a/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
@@ -105,6 +105,9 @@
     case IconType.Star:
         <i class="@Model.Class fa-solid fa-star"></i>
         break;
+    case IconType.StarOutline:
+        <i class="@Model.Class fa-regular fa-star"></i>
+        break;
     case IconType.Sun:
         <i class="@Model.Class fa-regular fa-sun"></i>
         break;
