--- a/ODK.Web.Razor/Pages/My/Groups/Group/Payments/Index.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Group/Payments/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/my/groups/{id:guid}/payments"
 @using ODK.Services.Chapters
-@model ODK.Web.Razor.Pages.My.Groups.Group.PaymentsModel
+@model ODK.Web.Razor.Pages.My.Groups.Group.Payments.IndexModel
 @inject IChapterAdminService ChapterAdminService
 @{
     Layout = "_GroupAdminLayout";
