--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupCreateForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupCreateForm.cshtml
@@ -5,6 +5,17 @@
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Topics
 @model CreateChapterFormViewModel
+@{
+    var countryOptions = Model.Countries
+        .OrderBy(x => x.Name)
+        .Select(x => new SelectListItem
+        {
+            Value = x.Id.ToString(),
+            Text = x.Name
+        })
+        .Prepend(new SelectListItem { Value = "" })
+        .ToArray();
+}
 
 @await Html.PartialAsync("Components/_Wizard", new WizardViewModel
 {
@@ -64,6 +75,12 @@
                         @Html.ValidationMessageFor(x => x.Location.Name)
                         @Html.HiddenFor(x => x.Location.Lat, new { data_location_lat = "" })
                         @Html.HiddenFor(x => x.Location.Long, new { data_location_long = "" })
+                    </div>
+
+                    <div class="form-group mb-3 required">
+                        @Html.LabelFor(x => x.CountryId, new { @class = "form-label" })
+                        @Html.DropDownListFor(x => x.CountryId, countryOptions, new { @class = "form-select", data_clearable = "", data_searchable = "" })
+                        @Html.ValidationMessageFor(x => x.CountryId)
                     </div>
 
                     <div class="form-group mb-3 required">
