--- a/ODK.Web.Razor/Pages/My/Groups/Group/Payments/Account.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Group/Payments/Account.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/my/groups/{id:guid}/payments/account"
 @using ODK.Services.Chapters
+@using ODK.Web.Common.Routes
 @model ODK.Web.Razor.Pages.My.Groups.Group.Payments.AccountModel
 @inject IChapterAdminService ChapterAdminService
 @{
@@ -7,21 +8,38 @@
     Model.Title = "Account | Payments";
 
     var request = Model.AdminServiceRequest;
+    var platform = request.Platform;
     var viewModel = await ChapterAdminService.GetChapterPaymentAccountViewModel(request);
 }
 
 <h2>Payment account</h2>
 
-@if (string.IsNullOrEmpty(viewModel.ExternalId))
+<p>
+    Set up a payment account to take payments from your members.
+</p>
+
+@if (!viewModel.HasPermission)
+{
+    <div class="alert alert-danger">
+        Upgrade your <a href="@OdkRoutes.Account.Subscription(platform, null)">subscription</a> to start accepting payments
+    </div>
+    return;
+}
+else if (!string.IsNullOrEmpty(viewModel.ExternalId))
+{
+    var subscriptionsUrl = OdkRoutes.MemberGroups.MembersSubscriptions(Model.Platform, viewModel.Chapter);
+    <div class="alert alert-success">
+        You have set up a payment account. 
+        Set up your <a href="@subscriptionsUrl">memberships</a>.
+    </div>
+}
+else if (!string.IsNullOrEmpty(viewModel.OnboardingUrl))
+{
+    <a href="@viewModel.OnboardingUrl">Resume setup</a>
+}
+else
 {
     <form method="post">
         <button class="btn btn-primary">Create</button>
     </form>
-}
-
-@if (!string.IsNullOrEmpty(viewModel.OnboardingUrl))
-{
-    <a href="@viewModel.OnboardingUrl">
-        @viewModel.OnboardingUrl
-    </a>
 }
