--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventForm.cshtml
@@ -112,7 +112,7 @@
         Tickets
     </legend>
 
-    @if (Model.TicketsEnabled && Model.PaymentSettings == null)
+    @if (Model.TicketsEnabled)
     {
         <div class="alert alert-warning">
             You must update your
@@ -126,21 +126,11 @@
             @Html.LabelFor(x => x.TicketCost, new { @class = "form-label" })
             <span class="ms-1 text-muted">The total ticket cost for this event. Set the max number of attendees above to set the number of tickets.</span>
             <div class="input-group">
-                @if (Model.PaymentSettings?.Currency != null)
-                {
-                    <span class="input-group-text">
-                        @Model.PaymentSettings.Currency.Symbol
-                    </span>
-                }
+                <span class="input-group-text">
+                    @Model.PaymentSettings.Currency.Symbol
+                </span>
                 @Html.TextBoxFor(x => x.TicketCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
-            </div>
-            <div>
-                @await Html.PartialAsync("Payments/_PaymentCommissionText", new PaymentCommissionTextViewModel
-                {
-                    ChapterPaymentSettings = Model.PaymentSettings,
-                    OwnerSubscription = Model.OwnerSubscription
-                })
-            </div>
+            </div>            
             @Html.ValidationMessageFor(x => x.TicketCost)
         </div>
 
@@ -148,12 +138,9 @@
             @Html.LabelFor(x => x.TicketDepositCost, new { @class = "form-label" })
             <span class="ms-1 text-muted">The deposit cost for this event. Members who pay a deposit will then only need to pay the remainder of the total cost.</span>
             <div class="input-group">
-                @if (Model.PaymentSettings?.Currency != null)
-                {
-                    <span class="input-group-text">
-                        @Model.PaymentSettings.Currency.Symbol
-                    </span>
-                }
+                <span class="input-group-text">
+                    @Model.PaymentSettings.Currency.Symbol
+                </span>
                 @Html.TextBoxFor(x => x.TicketDepositCost, format: "{0:0.00}", new { @class = "form-control", type = "number", step = 0.5 })
             </div>
             @Html.ValidationMessageFor(x => x.TicketDepositCost)
