--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionForm.cshtml
@@ -1,21 +1,7 @@
-﻿@using ODK.Core.Members
-@using ODK.Web.Common.Extensions
+﻿@using ODK.Web.Common.Extensions
 @using ODK.Web.Razor.Models.Admin.Members
 @using ODK.Web.Razor.Models.Payments
 @model SubscriptionFormViewModel
-@{
-    var typeOptions = new[]
-    {
-        SubscriptionType.Full,
-        SubscriptionType.Partial
-    }.Select(x => new SelectListItem { Text = x.ToString() });
-}
-
-<div class="form-group mb-3 required">
-    @Html.LabelFor(x => x.Type, new { @class = "form-label" })
-    @Html.DropDownListFor(x => x.Type, typeOptions, new { @class = "form-select" })
-    @Html.ValidationMessageFor(x => x.Type)
-</div>
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Name, new { @class = "form-label" })
@@ -41,13 +27,6 @@
             </span>
             @Html.TextBoxFor(x => x.Amount, new { @class = "form-control", type = "number", min = 0, step = 0.5 })
         </div>
-        <div>
-            @await Html.PartialAsync("Payments/_PaymentCommissionText", new PaymentCommissionTextViewModel
-           {
-               ChapterPaymentSettings = Model.PaymentSettings,
-               OwnerSubscription = Model.OwnerSubscription
-           })
-        </div>
         @Html.ValidationMessageFor(x => x.Amount)
     </div>
 
@@ -59,8 +38,8 @@
 
     @if (Model.SupportsRecurringPayments)
     {
-        <div class="mb-3 form-check">
-            @Html.CheckBoxFor(x => x.Recurring, new { @class = "form-check-input" })
+        <div class="mb-3 form-check form-switch">
+            @Html.CheckBoxFor(x => x.Recurring, new { @class = "form-check-input", role = "switch" })
             @Html.LabelFor(x => x.Recurring, new { @class = "form-check-label" })
 
             <span class="ms-1 text-muted">Payments will automatically be taken at the start of the next subscription period</span>
@@ -77,13 +56,6 @@ else if (Model.Amount != null)
         @Html.HiddenFor(x => x.Amount)
         @Html.LabelFor(x => x.Amount, new { @class = "form-label" })
         <input type="text" readonly class="form-control-plaintext" value="@Model.PaymentSettings.Currency.ToAmountString((decimal)Model.Amount.Value)" />
-        <div>
-           @await Html.PartialAsync("Payments/_PaymentCommissionText", new PaymentCommissionTextViewModel
-           {
-               ChapterPaymentSettings = Model.PaymentSettings,
-               OwnerSubscription = Model.OwnerSubscription
-           })
-        </div>
     </div>
 
     <div class="form-group mb-3">
@@ -94,8 +66,8 @@ else if (Model.Amount != null)
 
     @if (Model.SupportsRecurringPayments)
     {
-        <div class="mb-3 form-check">
-            @Html.CheckBoxFor(x => x.Recurring, new { @class = "form-check-input", disabled = "" })
+        <div class="mb-3 form-check form-switch">
+            @Html.CheckBoxFor(x => x.Recurring, new { @class = "form-check-input", role = "switch", disabled = "" })
             @Html.LabelFor(x => x.Recurring, new { @class = "form-check-label" })
 
             <span class="ms-1 text-muted">Payments will automatically be taken at the start of the next subscription period</span>
